ui/css/errors.scss
.critical-error {
  max-width: 600px;
  border-radius: 4px;
  border-left: #f66a0a 4px solid;
  background-color: rgba(255, 211, 61, 0.1);
  color: var(--color-text-default);
  display: flex;
  padding: 12px 12px 12px 8px;
  gap: 16px;
  line-height: 24px;

  &__container {
    padding: 20px;
    margin: 0 auto;
  }

  &__icon {
    padding-top: 4px;
  }

  &__link {
    cursor: pointer;
    text-decoration: none;
    color: var(--color-primary-default);

    &:hover {
      color: var(--color-primary-alternative);
    }
  }

  &__link-bug-report {
    white-space: nowrap;
  }

  &__link-restart {
    height: 40px;
    line-height: 40px;
    margin: 8px 0 32px;
  }
}

